# diluc-bot

./: .gitignore  .glitterrc  .prettierrc.cjs  .yarnrc.yml  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  start.sh  tsconfig.base.json  tsconfig.eslint.json
.cargo/: config.toml
.cspell/: custom-dictionary-workspace.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  THIRD_PARTY_LICENSES
.github/workflows/: continuous-delivery.yml  continuous-integration.yml
.yarn/patches/: didyoumean3.patch
lib/: index.ts
lib/commands/: remind.ts
lib/interaction-handlers/: autocomplete.ts
lib/lib/util/: cast.ts  initClean.ts  toProperCase.ts
lib/scheduled-tasks/: remind.ts
prisma/: schema.prisma
prisma/migrations/20220309065853_/: migration.sql
prisma/migrations/20220309070232_/: migration.sql
redis/: fuzzySearch.lua
scripts/: build.mjs  suppressExperimental.cjs
src/: Augment.d.ts  index.ts  main.rs  tsconfig.json  util.rs
src/commands/: character.rs  character.ts  eval.ts  exec.rs  mod.rs  ping.rs  ping.ts  tag.rs  tag.ts
src/data/: artifact.rs  character.rs  characters.ts  constellation.rs  mod.rs  talent.rs  talents.rs  weapon.rs
src/interaction-handlers/: autocomplete.ts  characterAutocomplete.ts
src/lib/data/: character.ts
src/lib/structures/: DilucClient.ts  DilucCommand.ts  Prisma.ts
src/lib/types/: OtherData.d.ts
src/lib/util/: initClean.ts  initializeWs.ts  useModal.ts
src/lib/util/logger/: success.ts
src/listeners/: chatInputCommandSuccess.ts  interactionCreate.ts  ready.ts
src/slashCommands/: character.ts  charakcter.txt  ping.txt
src/structures/: SlashCommandPiece.ts  SlashCommandStore.ts
