[package]
name = "diluc-bot"
version = "1.0.0"
rust-version = "1.58.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse-rust = "0.3.0"
libm = "0.2.2"
futures = "0.3.21"
serde_json = "1.0.79"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
num-format = "0.4.0"
strum = "0.24.0"
strum_macros = "0.24.0"
chrono = "0.4.19"
rayon = "1.5.2"
dashmap = "5.2.0"
anyhow = "1.0.56"
execute = "0.2.10"

[dependencies.poise]
git = "https://github.com/kangalioo/poise"
branch = "develop"

[dependencies.redis]
version = "0.21.5"
features = ["tokio-comp"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11.10"
features = ["json"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.mongodb]
version = "2.2.0"
features = ["zstd-compression"]

[profile.release]
lto = true
opt-level = "s"
strip = "symbols"
codegen-units = 1

[patch."https://github.com/serenity-rs/serenity".serenity]
git = "https://github.com/devtomio/serenity"
branch = "next"
