[package]
name = "diluc-bot"
version = "1.0.0"
rust-version = "1.58.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse-rust = "0.3.0"
libm = "0.2.2"
futures = "0.3.21"
serde_json = "1.0.81"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
num-format = "0.4.0"
strum = "0.24.1"
strum_macros = "0.24.0"
chrono = "0.4.19"
rayon = "1.5.3"
dashmap = "5.3.4"
anyhow = "1.0.58"
execute = "0.2.11"

[dependencies.poise]
git = "https://github.com/kangalioo/poise"
branch = "develop"

[dependencies.redis]
version = "0.21.5"
features = ["tokio-comp"]

[dependencies.tokio]
version = "1.19.2"
features = ["full"]

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.mongodb]
version = "2.2.2"
features = ["zstd-compression"]

[profile.release]
lto = true
opt-level = "s"
strip = "symbols"
codegen-units = 1

[patch."https://github.com/serenity-rs/serenity".serenity]
git = "https://github.com/devtomio/serenity"
branch = "next"
